--- a/DatiInterfOracleSpatial/GeoDataOverlayWindow.xaml
+++ b/DatiInterfOracleSpatial/GeoDataOverlayWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
-        Title="Visualizzazione GEO_DATI su Google Maps" Height="600" Width="900">
+        Title="Visualizzazione GEO_DATI su Google Maps Oracle Spatial" Height="600" Width="900">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
