--- a/DatiInterfOracleSpatial/MainWindow.xaml
+++ b/DatiInterfOracleSpatial/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:esri="http://schemas.esri.com/arcgis/runtime/2013"
-        Title="Visualizzatore CSV su Mappa" Height="600" Width="900">
+        Title="Prototipo per visualizzazione dati interferometrici su Mappa" Height="600" Width="900">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
