--- a/DatiInterfOracleSpatial/GeoDataOverlayWindow.xaml
+++ b/DatiInterfOracleSpatial/GeoDataOverlayWindow.xaml
@@ -6,18 +6,104 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
+            <!-- ListBox -->
+            <RowDefinition Height="Auto"/>
+            <!-- Pulsanti -->
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <!-- Barra superiore con pulsanti -->
-        <StackPanel Orientation="Horizontal" Margin="8" Grid.Row="0">
-            <ComboBox x:Name="CmbOrigineDato"
-                      Width="180"
-                      Height="32"
-                      Margin="0,0,8,0"
-                      VerticalAlignment="Center"
-                      SelectedIndex="0"/>
+        <!-- Prima riga: ListBox e GridSplitter -->
+        <Grid Grid.Row="0" Margin="8">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="150"/>
+                <ColumnDefinition Width="5"/>
+                <ColumnDefinition Width="170"/>
+                <ColumnDefinition Width="5"/>
+                <ColumnDefinition Width="170"/>
+                <ColumnDefinition Width="5"/>
+                <ColumnDefinition Width="110"/>
+                <ColumnDefinition Width="5"/>
+                <ColumnDefinition Width="170"/>
+                <ColumnDefinition Width="5"/>
+                <ColumnDefinition Width="110"/>
+                <ColumnDefinition Width="5"/>
+                <ColumnDefinition Width="110"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <ListBox x:Name="LstSt"
+                     MinWidth="100" MinHeight="60"
+                     MaxHeight="180"
+                     SelectionMode="Multiple"
+                     SelectionChanged="Filtro_SelectionChanged"
+                     Grid.Column="0"
+                     VerticalAlignment="Stretch"
+                     HorizontalAlignment="Stretch"/>
+            <GridSplitter Grid.Column="1" Width="5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="#DDD" ShowsPreview="True"/>
+
+            <ListBox x:Name="LstStrada"
+                     MinWidth="120" MinHeight="60"
+                     MaxHeight="180"
+                     SelectionMode="Multiple"
+                     SelectionChanged="Filtro_SelectionChanged"
+                     Grid.Column="2"
+                     VerticalAlignment="Stretch"
+                     HorizontalAlignment="Stretch"/>
+            <GridSplitter Grid.Column="3" Width="5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="#DDD" ShowsPreview="True"/>
+
+            <ListBox x:Name="LstKmSito"
+                     MinWidth="120" MinHeight="60"
+                     MaxHeight="180"
+                     SelectionMode="Multiple"
+                     SelectionChanged="Filtro_SelectionChanged"
+                     Grid.Column="4"
+                     VerticalAlignment="Stretch"
+                     HorizontalAlignment="Stretch"/>
+            <GridSplitter Grid.Column="5" Width="5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="#DDD" ShowsPreview="True"/>
+
+            <ListBox x:Name="LstSensore"
+                     MinWidth="80" MinHeight="60"
+                     MaxHeight="180"
+                     SelectionMode="Multiple"
+                     SelectionChanged="Filtro_SelectionChanged"
+                     Grid.Column="6"
+                     VerticalAlignment="Stretch"
+                     HorizontalAlignment="Stretch"/>
+            <GridSplitter Grid.Column="7" Width="5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="#DDD" ShowsPreview="True"/>
+
+            <ListBox x:Name="LstPeriodo"
+                     MinWidth="120" MinHeight="60"
+                     MaxHeight="180"
+                     SelectionMode="Multiple"
+                     SelectionChanged="Filtro_SelectionChanged"
+                     Grid.Column="8"
+                     VerticalAlignment="Stretch"
+                     HorizontalAlignment="Stretch"/>
+            <GridSplitter Grid.Column="9" Width="5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="#DDD" ShowsPreview="True"/>
+
+            <ListBox x:Name="LstTipo"
+                     MinWidth="80" MinHeight="60"
+                     MaxHeight="180"
+                     SelectionMode="Multiple"
+                     SelectionChanged="Filtro_SelectionChanged"
+                     Grid.Column="10"
+                     VerticalAlignment="Stretch"
+                     HorizontalAlignment="Stretch"/>
+            <GridSplitter Grid.Column="11" Width="5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="#DDD" ShowsPreview="True"/>
+
+            <ListBox x:Name="LstDirezione"
+                     MinWidth="80" MinHeight="60"
+                     MaxHeight="180"
+                     SelectionMode="Multiple"
+                     SelectionChanged="Filtro_SelectionChanged"
+                     Grid.Column="12"
+                     VerticalAlignment="Stretch"
+                     HorizontalAlignment="Stretch"/>
+        </Grid>
+
+        <!-- Seconda riga: Pulsanti, CheckBox e Legenda -->
+        <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="8,0,8,8" HorizontalAlignment="Right" VerticalAlignment="Center">
             <Button x:Name="BtnCaricaDati"
                     Content="Carica GEO_DATI"
                     Width="120"
@@ -42,15 +128,15 @@
                       Margin="8,0,0,0"
                       IsChecked="True"/>
             <Border x:Name="LegendBorder"
-       Background="White"
-       BorderBrush="Gray"
-       BorderThickness="1"
-       CornerRadius="6"
-       Padding="8"
-       HorizontalAlignment="Right"
-       VerticalAlignment="Bottom"
-       Margin="20"
-       Visibility="Collapsed">
+                    Background="White"
+                    BorderBrush="Gray"
+                    BorderThickness="1"
+                    CornerRadius="6"
+                    Padding="8"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Bottom"
+                    Margin="20"
+                    Visibility="Collapsed">
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                     <TextBlock x:Name="LegendMinLabel" Text="-5" Margin="0,0,8,0" VerticalAlignment="Center"/>
                     <Image x:Name="LegendImage" Width="180" Height="20" Stretch="Fill" VerticalAlignment="Center"/>
@@ -60,11 +146,11 @@
         </StackPanel>
 
         <!-- WebView2 per Google Maps -->
-        <wv2:WebView2 x:Name="WebView" Grid.Row="1" />
+        <wv2:WebView2 x:Name="WebView" Grid.Row="2" />
 
         <!-- Overlay di caricamento -->
         <Border x:Name="LoadingOverlay"
-             Grid.Row="1"
+             Grid.Row="2"
              Background="#80000000"
              Visibility="Collapsed"
              HorizontalAlignment="Stretch"
@@ -77,7 +163,7 @@
         </Border>
 
         <!-- Barra stato -->
-        <StatusBar Grid.Row="2" Height="22">
+        <StatusBar Grid.Row="3" Height="22">
             <TextBlock x:Name="StatusText" Text="Pronto"/>
         </StatusBar>
     </Grid>
